--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "17.0.2",
-    "react-router-dom": "^6.0.2"
+    "react-router-dom": "^6.0.2",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
