--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.0.3",
     "react-dom": "17.0.2",
     "react-router-dom": "^6.0.2",
+    "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.4.0",
     "timeago.js": "^4.0.2"
   },
