--- a/package.json
+++ b/package.json
@@ -25,5 +25,5 @@
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://dtchatapp.herokuapp.com"
 }
